<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/gradient_bg"
    tools:context=".LogIn_activity">

    <!-- Actually on this xml file because of the animations
        all the components are not visible for navigation,
        on the app loading is visualising the app logo for 2 sec
        and after are visialise the other components of the page-->

    <!-- Relative layout has into it the logo of the app   -->
    <RelativeLayout
        android:id="@+id/relative1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp">

        <!-- Image view for the logo  -->
        <ImageView
            android:id="@+id/imageView_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/benlogo1"/>

        <!--  It has into it the Login Label   -->
        <RelativeLayout
            android:id="@+id/relative1.1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_below="@+id/imageView_logo">

            <!-- Text view of the log in label  -->
            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/lblLogin"
                android:textColor="@color/white"
                android:textSize="30sp"/>

            <!-- Into this vertical linear layout are included 2 more vertical layouts  -->
            <LinearLayout
                android:id="@+id/linearlayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_login"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <!-- On this vertical linear are the label and the textbox of the email part
                     that the user need to input the details-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/email"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="15sp"/>

                    <EditText
                        android:id="@+id/txtLoginEmail"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:textSize="15sp"
                        android:textColor="@color/white"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:background="@drawable/txt_corners"
                        android:drawableEnd="@drawable/email_icon_24dp"/>


                </LinearLayout>

                <!-- On this vertical linear are the label and the textbox of the password part
                     that the user need to input the details-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/password"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="15sp"/>

                    <EditText
                        android:id="@+id/txtLoginPassword"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:textSize="15sp"
                        android:textColor="@color/white"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:background="@drawable/txt_corners"
                        android:drawableEnd="@drawable/password_icon_24dp"/>


                </LinearLayout>

            </LinearLayout>

            <!-- Log in button  -->
            <Button
                android:id="@+id/btnlogin"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/linearlayout1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:background="@drawable/btn_login"
                android:fontFamily="sans-serif-medium"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:text="@string/btnLogin"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="19sp" />


        </RelativeLayout>
    </RelativeLayout>

    <!-- Relative layout it has the link into it to navigate the user for creating an account
         if the user doesnt have account    -->
    <RelativeLayout
        android:id="@+id/relative2"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/linkbtnsignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:text="@string/linkBtnSingUp"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:fontFamily="sans-serif"
            android:drawableStart="@drawable/sign_up_icon_24dp"/>

    </RelativeLayout>

</RelativeLayout>